--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
@@ -238,6 +238,7 @@ PART
 		partToolTip = You can transfer KIS items between facilities and craft in addition to resources.
 
 		opsViewTitle = Pipeline Operations
+		templateName = none
 
 		//If the part has a KIS container, this is the base and max amount
 		baseStorage = 0.001
