--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
@@ -171,6 +171,7 @@ PART
 
 		opsViewTitle = Rangeland Operations
 		guiVisible = false
+		templateName = none
 
 		//List of part modules that should be enabled/disabled depending upon whether or not the part is deployed.
 		MANAGED_MODULES
