--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
@@ -474,6 +474,7 @@ PART
 		partToolTip = The Castillo Factory is a large production facility that's able to produce a variety of different resources.
 
 		opsViewTitle = Castillo Operations
+		templateName = none
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir;StaleAir;FreshAir;HydrazineVodka
