--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/groundStation.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/groundStation.cfg
@@ -245,6 +245,7 @@ PART
 		partToolTip = The Ground Station is a powerful relay that can be operated independently of a base and combined with other ground stations for extended range.
 
 		opsViewTitle = Ground Station Operations
+		templateName = none
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir;HydrazineVodka
