--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
@@ -284,6 +284,7 @@ PART
 		partToolTip = The Castillo is a large multipurpose building that primarily serves as a community center, dormitory, and tourist trap. It can level up experienced astronauts as well as train tourists into scientists, engineers, and pilots.
 
 		opsViewTitle = Castillo Operations
+		templateName = none
 
 		//Snacks
 		// resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir;HydrazineVodka
