--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/walkway2X.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/walkway2X.cfg
@@ -247,6 +247,7 @@ PART
 
 		partToolTipTitle = Your First Walkway
 		partToolTip = Use these to put space between your base parts.
+		templateName = none
 
 		//List of part modules that should be enabled/disabled depending upon whether or not the part is deployed.
 		MANAGED_MODULES
