--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -108,6 +108,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart		
+		InventorySlots = 6
+		packedVolumeLimit = 1000
+	}
+
+	MODULE
+	{
 		name = WBILight
 		animationName = Ponderosa2Lights
 		startEventGUIName = Lights On
@@ -156,6 +163,7 @@ PART
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
 		defaultTemplate = GeoLab
+		templateName = GeoLab
 
 		//Name of the logo panel transforms
 		logoPanelTransforms = logoPanel001, logoPanel002, logoPanel003
