--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -111,6 +111,7 @@ PART
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
 		defaultTemplate = LFO
+		templateName = LFO
 
 		//name of the template nodes to use
 		templateNodes = GREENHOUSE;STORAGE_TEMPLATE;PATH_POWER
@@ -182,6 +183,13 @@ PART
 	{
 		name = ModuleGroundPart
 		packedVolume = 400
+	}
+
+	MODULE
+	{
+		name = ModuleInventoryPart		
+		InventorySlots = 9
+		packedVolumeLimit = 2000
 	}
 
 	MODULE
