--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
@@ -180,6 +180,7 @@ PART
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
 		defaultTemplate = Bootstrap
+		templateName = Bootstrap
 
 		//name of the template nodes to use
 		templateNodes = CONESTOGA;STORAGE_TEMPLATE;PATH_POWER
