--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -162,6 +162,7 @@ PART
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
 		defaultTemplate = Ironworks
+		templateName = Ironworks
 
 		//Name of the logo panel transforms
 		logoPanelTransforms = logoPanel001, logoPanel002, logoPanel003
@@ -273,6 +274,13 @@ PART
 	{
 		name = ModuleGroundPart
 		packedVolume = 400
+	}
+
+	MODULE
+	{
+		name = ModuleInventoryPart		
+		InventorySlots = 24
+		packedVolumeLimit = 11000
 	}
 
 	MODULE
