--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castillo.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castillo.cfg
@@ -19,8 +19,8 @@ PART
 		name = Node1
 		transform = node1
 		size = 2
-		method = FIXED_JOINT
-		rigid = true
+//		method = FIXED_JOINT
+//		rigid = true
 	}
 
 	NODE
@@ -403,6 +403,7 @@ PART
 		partToolTip = The Castillo is a large multipurpose building that primarily serves as a community center, dormitory, and tourist trap. It can level up experienced astronauts as well as train tourists into scientists, engineers, and pilots.
 
 		opsViewTitle = Castillo Operations
+		templateName = none
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir;StaleAir;FreshAir;HydrazineVodka
