--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
@@ -174,6 +174,7 @@ PART
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
 		defaultTemplate = GeoLab
+		templateName = GeoLab
 
 		//Name of the logo panel transforms
 		logoPanelTransforms = logoPanel001, logoPanel002, logoPanel003, logoPanel004
