--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
@@ -69,6 +69,7 @@ PART
 	    //This is used when selecting the part in the editor.
 	    //User will then right-click on the module to change its type.
 	    defaultTemplate = LFO
+	    templateName = LFO
 
 	    //name of the template nodes to use
 	    templateNodes = STORAGE_TEMPLATE
@@ -106,4 +107,10 @@ PART
 	    defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 
+	MODULE
+	{
+		name = ModuleInventoryPart		
+		InventorySlots = 6
+		packedVolumeLimit = 1000
+	}
 }
