--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/Sandcastle.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/Sandcastle.cfg
@@ -10,7 +10,7 @@
 	// introduces ModuleStorablePart, which is a direct descendant of ModuleCargoPart. Because
 	// the Part class specifically looks for "ModuleCargoPart" we essentially rename the part module
 	// to sidestep the checks.
-	@MODULE[ModuleGroundPart]
+	@MODULE[ModuleInventoryPart]
 	{
 		@name = ModuleStorablePart
 	}
