--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
@@ -64,6 +64,7 @@ PART
 	breakingForce = 50
 	breakingTorque = 50
 	bulkheadProfiles = size1, srf
+	vesselType = Base
 
 	MODULE:NEEDS[KIS]
 	{
@@ -135,6 +136,19 @@ PART
 
 	MODULE
 	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.028
+		}
+		hasHibernation = True
+		hibernationMultiplier = 0.004
+	}
+
+	MODULE
+	{
 		name = WBIPipeEndpoint
 
 		//Can the pipeline send payloads from orbit to ground? Normally this isn't allowed.
@@ -182,7 +196,6 @@ PART
 	{
 		name = WBIResourceDistributor
 	}
-
 	MODULE
 	{
 		name = WBIOmniStorage
@@ -252,6 +265,7 @@ PART
 			moduleName = WBIOmniStorage
 			moduleName = WBIResourceDistributor
 			moduleName = ModuleColorChanger
+			moduleName = ModuleFuelPump
 		}
 
 		//List of resources needed to unpack the part.
