--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
@@ -51,6 +51,7 @@ PART
 	emissiveConstant = 0.9
 	thermalMassModifier = 30.5
 	bulkheadProfiles = size1, srf
+	vesselType = Base
 
 	MODULE:NEEDS[KIS]
 	{
@@ -118,7 +119,6 @@ PART
 	{
 		name = WBIResourceDistributor
 	}
-
 	MODULE
 	{
 		name = WBIOmniStorage
@@ -176,13 +176,13 @@ PART
 		//List of part modules that should be enabled/disabled depending upon whether or not the part is deployed.
 		MANAGED_MODULES
 		{
-			moduleName = ModuleCommand
 			moduleName = ELLaunchpad
 			moduleName = ELRecycler
 			moduleName = ELTarget
 			moduleName = WBILight
 			moduleName = WBIResourceDistributor
 			moduleName = WBIOmniStorage
+			moduleName = ModuleFuelPump
 		}
 
 		//List of resources required to unpack the box
