--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/arcReactor.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/arcReactor.cfg
@@ -72,7 +72,7 @@ PART
 	breakingForce = 500000
 	breakingTorque = 500000
 	bulkheadProfiles = size1, srf
-	vesselType = Relay
+	vesselType = Base
 	CrewCapacity = 0
 
 	MODULE:NEEDS[KIS]
@@ -163,7 +163,22 @@ PART
 			Ratio = 60
 		}
 	}
-
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.02777778
+		}
+		hasHibernation = True
+		hibernationMultiplier = 0.004
+	}
+	MODULE
+	{
+		name = WBIResourceDistributor
+	}
 	MODULE
 	{
 		name = WBIPackingBox
@@ -207,6 +222,8 @@ PART
 		MANAGED_MODULES
 		{
 			moduleName = WBIOmniConverter
+			moduleName = WBIResourceDistributor
+			moduleName = ModuleFuelPump
 		}
 
 		//List of resources needed to unpack the part.
