--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castillo.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castillo.cfg
@@ -112,6 +112,7 @@ PART
 	bulkheadProfiles = size1, srf
 	stackSymmetry = 7
 	CrewCapacity = 32
+	vesselType = Base
 
 	INTERNAL
 	{
@@ -224,7 +225,14 @@ PART
 	MODULE
 	{
 		name = ModuleCommand
-		minimumCrew = 1	
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.02777778
+		}
+		hasHibernation = True
+		hibernationMultiplier = 0.004
 	}
 
 	MODULE
@@ -363,7 +371,6 @@ PART
 	{
 		name = WBIResourceDistributor
 	}
-
 	MODULE
 	{
 		name = WBIPackingBox
@@ -419,7 +426,6 @@ PART
 			moduleName = ModuleKISInventory
 			moduleName = WBIKISInventoryManager
 			moduleName = ModuleDataTransmitter
-			moduleName = ModuleCommand
 			moduleName = ModuleExperienceManagement
 			moduleName = WBIClassConverter
 			moduleName = WBITouristTrap
@@ -429,6 +435,9 @@ PART
 			moduleName = WBIGoldStrikeBonus
 			moduleName = WBIScienceDataGenerator
 			moduleName = WBIResourceDistributor
+			moduleName = ModuleFuelPump
+			moduleName = ModuleSeatChanger
+			moduleName = ModuleSuitSwitcher
 		}
 
 		//List of resources needed to unpack the part.
