--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
@@ -111,13 +111,26 @@ PART
 	breakingTorque = 500000
 	bulkheadProfiles = size1, srf
 	stackSymmetry = 7
-	CrewCapacity = 21
+	CrewCapacity = 0
+	vesselType = Base
 
 	INTERNAL
 	{
 		name = wbiFactoryIVA
 	}
 
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.02777778
+		}
+		hasHibernation = True
+		hibernationMultiplier = 0.004
+	}
 	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
@@ -159,7 +172,7 @@ PART
 	{
 		name = ModuleInventoryPart		
 		InventorySlots = 24
-		packedVolumeLimit = 5000
+		packedVolumeLimit = 11000
 	}
 
 	MODULE
@@ -379,7 +392,7 @@ PART
 	{
 		name = WBIOmniStorage
 
-		storageVolume = 5000
+		storageVolume = 11000
 
 		//Adjust storage volume to account for resource switcher's capacity factor.
 		accountForSwitcherCapacity = true
@@ -405,27 +418,105 @@ PART
 	{
 		name = WBIResourceDistributor
 	}
-
-	//OSE Workshop
-	MODULE:NEEDS[Workshop] 
+	MODULE:NEEDS[Sandcastle]
 	{
-		name = OseModuleWorkshop
-		ProductivityFactor = 0.05 // Consumption rate of each required resource in units/sec.
-		SpecialistEfficiencyFactor = 0.008 //Additional unit/sec of each resource that will be consumed, per experience star of the specialist.
-		ExperienceEffect = RepairSkill //Skill required for the increased efficiency.
-		UpkeepResource = ElectricCharge // This resource will be consumed 1 per second during processing
-		MinimumCrew = 3 // Amount of Kerbals needed for the Workshop to work
+		name = WBIPrintShop
+
+		// The maximum volume that the printer can print, in liters. Set to less than 0 for no restrictions.
+		maxPrintVolume = 11000
+
+		// The number of resource units per second that the printer can print.
+		printSpeedUSec = 0.25
+
+		// Flag to indicate whether or not to allow specialists to improve the print speed. 
+		// Exactly how the specialist does that is a trade secret.
+		UseSpecialistBonus = true
+
+		// Per experience rating, how much to improve the print speed by.
+		// The print shop part must have crew capacity.
+		SpecialistBonus = 0.05
+
+		// The skill required to improve the print speed.
+		ExperienceEffect = "ConverterSkill"
+
+		// Name of the effect to play from the part's EFFECTS node when the printer is running.
+//		runningEffect = 
+
+		// Name of the animation to play when the printer is running.
+		animationName = PrinterAnim
+
+		// The printer itself may require one or more resources in order to operate.
+		// You can also use INPUT_RESOURCE in place of RESOURCE, but the other fields remain the same.		
+		// It's possible to have some kind of OUTPUT_RESOURCE as well, but we just use the stock resources.
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 10
+		}
+
+		// Normally, 3D printers can print from any category, but you can create specialized printers
+		// that can only print from one or more categories. To do so, simply specify a CATEGORY_WHITELIST
+		// and one or more whitelistedCategory entries.
+//		CATEGORY_WHITELIST
+//		{
+//			whitelistedCategory = Pods
+//			whitelistedCategory = Electrical
+//			whitelistedCategory = none
+//		}
+
+		// Normally, 3D printers can print any part that fits in its maxPrintVolume, but you can create specialized printers
+		// that can only print one or more parts. To do so, simply specify a PARTS_WHITELIST and one or more whitelistedPart entries.
+		// Parts on the whitelist can be printed even if they show up on the global PARTS_BLACKLIST.
+//		PARTS_WHITELIST
+//		{
+//			whitelistedPart = batteryPack
+//			whitelistedPart = probeCoreCube
+//		}
+
+		// Normally, 3D printers can print any part that fits in its maxPrintVolume, but you can create specialized printers
+		// that are incapable of printing parts on this list. To do so, simply specify a PARTS_BLACKLIST and one or more blacklistedPart entries.
+//		PARTS_BLACKLIST
+//		{
+//			blacklistedPart = whoopieCushions
+//			blacklistedPart = boomerangFish
+//		}
 	}
 
-	MODULE:NEEDS[Workshop]
+	MODULE:NEEDS[Sandcastle]
 	{
-		name = OseModuleRecycler
-		ConversionRate = 0.5 // How much of a parts mass will be recycled
-		ProductivityFactor = 0.05 // Recycle rate of each required resource in units/sec.
-		SpecialistEfficiencyFactor = 0.008 //Additional unit/sec of each resource that will be recycled, per experience star of the specialist.
-		ExperienceEffect = RepairSkill //Skill required for the increased efficiency.
-		UpkeepResource = ElectricCharge // This resource will be consumed 1 per second during processing
-		MinimumCrew = 3 // Amount of Kerbals needed for the Recycler to work
+		name = WBICargoRecycler
+		
+		// The number of units of a resource to recycle per second.
+		recycleSpeedUSec = 0.5
+
+		// What percentage of the resources that can be recycled.
+		recyclePercentage = 0.45
+
+		// Flag to indicate whether or not to allow specialists to improve the recycle speed. 
+		// Exactly how the specialist does that is a trade secret.
+		UseSpecialistBonus = true
+
+		// Per experience rating, how much to improve the recycle speed by.
+		// The recycler part must have crew capacity.
+		SpecialistBonus = 0.05
+
+		// The skill required to improve the recycling speed.
+		ExperienceEffect = "ConverterSkill"
+
+		// Name of the effect to play from the part's EFFECTS node when the recycler is running.
+//		runningEffect = 
+
+		// Name of the animation to play when the printer is running.
+		animationName = PrinterAnim
+
+		// The recycler itself may require one or more resources in order to operate.
+		// You can also use INPUT_RESOURCE in place of RESOURCE, but the other fields remain the same.		
+		// It's possible to have some kind of OUTPUT_RESOURCE as well, but we just use the stock resources.
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 5
+		}
 	}
 
 	//EL Workshop
@@ -461,7 +552,7 @@ PART
 		endEventGUIName = Collapse (EDITOR ONLY)
 
 		//Crew capacity when inflated
-		inflatedCrewCapacity = 32
+		inflatedCrewCapacity = 21
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
@@ -492,9 +583,12 @@ PART
 			moduleName = WBIOmniStorage
 			moduleName = WBIEfficiencyBonus
 			moduleName = WBIResourceDistributor
-			moduleName = OseModuleWorkshop
-			moduleName = OseModuleRecycler
+			moduleName = WBIPrintShop
+			moduleName = WBICargoRecycler
 			moduleName = ELWorkshop
+			moduleName = ModuleFuelPump
+			moduleName = ModuleSeatChanger
+			moduleName = ModuleSuitSwitcher
 		}
 
 		//List of resources needed to unpack the part.
