--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloObservatory.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloObservatory.cfg
@@ -111,13 +111,26 @@ PART
 	breakingTorque = 500000
 	bulkheadProfiles = size1, srf
 	stackSymmetry = 7
-	CrewCapacity = 18
+	CrewCapacity = 0
+	vesselType = Base
 
 	INTERNAL
 	{
 		name = wbiObservatoryIVA
 	}
 
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.02777778
+		}
+		hasHibernation = True
+		hibernationMultiplier = 0.004
+	}
 	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
@@ -588,7 +601,6 @@ PART
 	{
 		name = WBIResourceDistributor
 	}
-
 	MODULE
 	{
 		name = WBITrackingController
@@ -695,7 +707,7 @@ PART
 		endEventGUIName = Collapse (EDITOR ONLY)
 
 		//Crew capacity when inflated
-		inflatedCrewCapacity = 32
+		inflatedCrewCapacity = 18
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
@@ -724,7 +736,6 @@ PART
 			moduleName = ModuleKISInventory
 			moduleName = WBIKISInventoryManager
 			moduleName = ModuleDataTransmitter
-			moduleName = ModuleCommand
 			moduleName = WBIEfficiencyMonitor
 			moduleName = ModuleQualityControl
 			moduleName = WBIMultipurposeLab
@@ -749,6 +760,7 @@ PART
 			moduleName = WBIModuleScienceExperiment
 			moduleName = WBISciLabOpsView
 			moduleName = ModuleTrackBodies
+			moduleName = ModuleFuelPump
 		}
 
 		//List of resources needed to unpack the part.
