--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
@@ -68,6 +68,18 @@ PART
 
 	MODULE
 	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.02777778
+		}
+		hasHibernation = True
+		hibernationMultiplier = 0.004
+	}
+	MODULE
+	{
 		name = WBIAnimation
 		animationName = DrillAnim
 		startEventGUIName = Activate
@@ -151,7 +163,10 @@ PART
 		//Separate by semicolon. Below is the default.
 		resourceBlacklist = GeoEnergy;ElectroPlasma;CoreHeat;Atmosphere;CompressedAtmosphere;LabTime;ExposureTime;ScopeTime;SolarReports;SimulatorTime;GravityWaves;IntakeAir;StaticCharge;EVA Propellant;Plants
 	}
-
+	MODULE:NEEDS[WildBlueCore]
+	{
+		name = ModuleFuelPump
+	}
 	MODULE
 	{
 		name = WBIPackingBox
@@ -200,6 +215,7 @@ PART
 			moduleName = WBIGoldStrikeDrill
 			moduleName = ModuleAnimationGroup
 			moduleName = WBIOmniStorage
+			moduleName = ModuleFuelPump
 		}
 
 		//List of resources needed to unpack the part.
