--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/groundStation.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/groundStation.cfg
@@ -129,7 +129,6 @@ PART
 		isParticipating = true
 		showGUIOverride = true
 	}
-	
 	MODULE
 	{
 		name = WBITrackingController
@@ -257,11 +256,11 @@ PART
 		MANAGED_MODULES
 		{
 			moduleName = ModuleDataTransmitter
-			moduleName = ModuleCommand
 			moduleName = WBIResourceDistributor
 			moduleName = WBIScienceDataGenerator
 			moduleName = WBITrackingController
-			moduleNaem = ModuleProbeControlPoint
+			moduleName = ModuleProbeControlPoint
+			moduleName = ModuleFuelPump
 		}
 
 		//List of resources needed to unpack the part.
