--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
@@ -112,7 +112,20 @@ PART
 	bulkheadProfiles = size1, srf
 	stackSymmetry = 7
 	CrewCapacity = 0
+	vesselType = Base
 
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.02777778
+		}
+		hasHibernation = True
+		hibernationMultiplier = 0.004
+	}
 	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
@@ -271,7 +284,7 @@ PART
 		endEventGUIName = Collapse (EDITOR ONLY)
 
 		//Crew capacity when inflated
-		inflatedCrewCapacity = 32
+		inflatedCrewCapacity = 0
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
@@ -280,8 +293,8 @@ PART
 		baseStorage = 0.0001
 		maxStorage = 20000
 
-		partToolTipTitle = Your First Castillo
-		partToolTip = The Castillo is a large multipurpose building that primarily serves as a community center, dormitory, and tourist trap. It can level up experienced astronauts as well as train tourists into scientists, engineers, and pilots.
+		partToolTipTitle = Your First Castillo Depot
+		partToolTip = The Castillo Depot is a large warehouse that can store a wide variety of resources.
 
 		opsViewTitle = Castillo Operations
 		templateName = none
@@ -300,6 +313,7 @@ PART
 			moduleName = WBIResourceDistributor
 			moduleName = WBIMeshToggle
 			moduleName = WBIMeshHelper
+			mouduleName = ModuleFuelPump
 		}
 
 		//List of resources needed to unpack the part.
