--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
@@ -297,6 +297,17 @@ PART
 		maxAmount = 2000
 	}
 
+	//EL Recipe needed to build the part.
+	EL_Recipe
+	{
+		structure = 1
+		Resources
+		{
+			Konkrete = 0.75
+			RocketParts = 0.25
+		}
+	}
+
 	MODULE
 	{
 		name = ModuleGroundPart
