--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
@@ -217,6 +217,17 @@ PART
 		name = ModuleGroundPart
 		packedVolume = 1100
 	}
+
+	//EL Recipe needed to build the part.
+	EL_Recipe
+	{
+		structure = 1
+		Resources
+		{
+			Konkrete = 0.75
+			RocketParts = 0.25
+		}
+	}
 }
 
 @PART[KIS_ContainerMount1]:NEEDS[KIS]
