--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
@@ -618,14 +618,14 @@ PART
 		showGui = false
 	}
 
-	//EL Recipie needed to build the part.
-	EL_Recipie
+	//EL Recipe needed to build the part.
+	EL_Recipe
 	{
 		structure = 1
 		Resources
 		{
 			Konkrete = 0.75
-			Equipment = 0.25
+			RocketParts = 0.25
 		}
 	}
 }
