--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/groundStation.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/groundStation.cfg
@@ -292,14 +292,14 @@ PART
 		maxAmount = 5000
 	}
 
-	//EL Recipie needed to build the part.
-	EL_Recipie
+	//EL Recipe needed to build the part.
+	EL_Recipe
 	{
 		structure = 1
 		Resources
 		{
-			Konkrete = 0.45
-			Equipment = 0.65
+			Konkrete = 0.75
+			RocketParts = 0.25
 		}
 	}
 
