--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
@@ -92,7 +92,7 @@ PART
 	{
 		name = WBIGoldStrikeDrill
 		HarvesterType = 0
-		Efficiency = 6
+		Efficiency = 16
 		ResourceName = Ore
 		ConverterName = Ore
 		StartActionName = Start Strip Mining
@@ -102,16 +102,16 @@ PART
 		ImpactRange = 15
 		AutoShutdown = true
 		UseSpecialistBonus = false
-//		SpecialistEfficiencyFactor = 0.2
-//		SpecialistBonusBase = 0.05
-//		ExperienceEffect = DrillSkill
-//		EfficiencyBonus = 6
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = DrillSkill
+		EfficiencyBonus = 6
 		GeneratesHeat = false
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 45
+			Ratio = 15
 		}
 	}
 
@@ -186,6 +186,10 @@ PART
 		//Name of inflatable animation
 		animationName = Deploy
 		animationLayer = 8
+
+		templateNodes = PATH_DRILLING
+		defaultTemplate = DrillingRig
+		templateName = DrillingRig
 
 		//GUI name of deploy animation
 		startEventGUIName = Assemble
@@ -280,4 +284,12 @@ PART
 			allowedPartName = wbiDrillingRig
 		}
 	}
+}
+
+PATH_DRILLING
+{
+	author = Angel-125
+	name = DrillingRig
+	description = This kit does nothing. Nothing at all.
+	enableDrill = true
 }
