corrects mouduleName = ModuleFuelPump

--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
@@ -313,7 +313,7 @@ PART
 			moduleName = WBIResourceDistributor
 			moduleName = WBIMeshToggle
 			moduleName = WBIMeshHelper
-			mouduleName = ModuleFuelPump
+			moduleName = ModuleFuelPump
 		}
 
 		//List of resources needed to unpack the part.
