--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -199,13 +199,14 @@ OMNICONVERTER
 	{
 		ResourceName = FusionPellets
 		Ratio = 0.0005
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 	OUTPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 500
 		DumpExcess = True
+		FlowMode = ALL_VESSEL
 	}
 	OUTPUT_RESOURCE
 	{
@@ -875,12 +876,47 @@ OMNICONVERTER
 	 }
 }
 
+OMNICONVERTER
+{
+	TechRequired = scienceTech
+	ConverterName = Ore -> Konkrete
+	description = Melt Ore into Konkrete
+	StartActionName = Ore/Konkrete On
+	StopActionName = Ore/Konkrete Off
+	AutoShutdown = true
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ConverterSkill
+	EfficiencyBonus = 1
+		 
+	 INPUT_RESOURCE
+	 {
+		ResourceName = Ore
+		Ratio = 0.5
+		FlowMode = ALL_VESSEL
+	 }
+	 INPUT_RESOURCE
+	 {
+		ResourceName = ElectricCharge
+		Ratio = 25
+		FlowMode = ALL_VESSEL
+	 }
+	 OUTPUT_RESOURCE
+	 {
+		ResourceName = Konkrete
+		Ratio = 0.25
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	 }
+}
+
 //Blutonium Enricher
 OMNICONVERTER
 {
 	TechRequired = experimentalScience
 	ConverterName = Blutonium Enricher
-	description = Enrich Blutonium with Hexagen to produce NuclearFuel for reactors and engines.
+	description = Process Blutonium produce Nuclear Fuel for reactors and engines. Gives off a small amount of Hexium as well.
 	StartActionName = Start Enricher
 	StopActionName = Stop Enricher
 	AutoShutdown = false
@@ -899,13 +935,6 @@ OMNICONVERTER
 
 	INPUT_RESOURCE
 	{
-		ResourceName = Hexagen
-		Ratio = 0.0005
-		FlowMode = ALL_VESSEL
-	}
-
-	INPUT_RESOURCE
-	{
 		ResourceName = ElectricCharge
 		Ratio = 18
 		FlowMode = ALL_VESSEL
@@ -915,6 +944,14 @@ OMNICONVERTER
 	{
 		ResourceName = NuclearFuel
 		Ratio = 0.001
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Hexagen
+		Ratio = 0.0005
 		DumpExcess = false
 		FlowMode = ALL_VESSEL
 	}
@@ -1173,6 +1210,51 @@ OMNICONVERTER
 		FlowMode = ALL_VESSEL
 	}
 }
+//Make Fusion Pellets from Ore
+OMNICONVERTER
+{
+	templateTags = lab
+	TechRequired = experimentalScience
+	%TechRequired:NEEDS[CommunityTechTree] = fusionPower
+	ConverterName = Ore->FusionPellets Processor
+	description = Produce FusionPellets from Ore and EC
+	StartActionName = Start Ore->Fusion Pellets
+	StopActionName = Stop Ore->Fusion Pellets
+	AutoShutdown = true
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ConverterSkill
+	EfficiencyBonus = 1
+
+	INPUT_RESOURCE
+	{
+		ResourceName = Ore
+		Ratio = 0.001
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 30
+		FlowMode = ALL_VESSEL
+	}
+	OUTPUT_RESOURCE
+	{
+		ResourceName = FusionPellets
+		Ratio = 0.0045
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	}
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Slag
+		Ratio = 0.97
+		DumpExcess = true
+		FlowMode = ALL_VESSEL
+	}
+}
 
 //ResearchKits
 OMNICONVERTER
@@ -1212,14 +1294,50 @@ OMNICONVERTER
 		FlowMode = ALL_VESSEL
 	}
 }
+//Smelt MetallicOre into Metal
+OMNICONVERTER:NEEDS[Launchpad]
+{
+	templateTags = lab
+	TechRequired = generalConstruction
+	ConverterName = Smelt MetallicOre
+	description = Smelt metallic into metal
+	StartActionName = Start metallic smelter
+	StopActionName = Stop metallic smelter
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ConverterSkill
+	EfficiencyBonus = 1
+		 
+	INPUT_RESOURCE 
+	{
+		ResourceName = MetallicOre
+		Ratio = 0.7
+		FlowMode = ALL_VESSEL
+	}
 
-//EL
+	INPUT_RESOURCE 
+	{	
+		ResourceName = ElectricCharge
+		Ratio = 7.5		
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Metal
+		Ratio = 0.4935
+		FlowMode = ALL_VESSEL
+	}
+}
+//EL Smelt metal ore into metal
 OMNICONVERTER:NEEDS[Launchpad]
 {
 	templateTags = lab
 	TechRequired = generalConstruction
 	ConverterName = Smelt Metal
-	description = Smelt metal into metal ore
+	description = Smelt metal ore into metal
 	StartActionName = Start metal smelter
 	StopActionName = Stop metal smelter
 	AutoShutdown = false
