--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/WildBlueCore.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/WildBlueCore.cfg
@@ -1,16 +1,24 @@
-@PART:HAS[@MODULE[WBIResourceDistributor]]:NEEDS[WildBlueIndustries/00WildBlueCore]
+@PART[wbiStorageDepot,WBI_MBM]:NEEDS[WildBlueIndustries/00WildBlueCore]
 {
+	!MODULE[WBIResourceDistributor] {}
+
 	MODULE
 	{
 		name = ModuleFuelPump
 	}
-}
 
-// Give a supply line
-@PART[wbiStorageDepot,WBI_MBM]:NEEDS[WildBlueIndustries/00WildBlueCore]
-{
 	MODULE
 	{
 		name = ModuleSupplyLine
+	}
+}
+
+@PART:HAS[@MODULE[WBIResourceDistributor]]:NEEDS[WildBlueIndustries/00WildBlueCore]
+{
+	!MODULE[WBIResourceDistributor] {}
+
+	MODULE
+	{
+		name = ModuleFuelPump
 	}
 }
